--- a/sass/elements/_cell.scss
+++ b/sass/elements/_cell.scss
@@ -19,11 +19,13 @@
   height: 20px;
   display: block;
 
-  textarea {
+  pre {
 	width: 100%;
 	height: 100%;
-	resize: none;
 	border: none;
+	background: none;
+	margin: 0;
+	padding: 0;
   }
 }
 
