[HER-3] Changes: * Editor Toolbar - Implemented Editor
* Sidebar
- Changes to sidebar value, now pulls input properly
- Altered top offset based on height of #editor-toolbar

* Toolbar (now named Left Toolbar)
- Altered top offset based on height of #editor-toolbar

* General
- Fixed z-index of page-container & other top level elements
- Optimized some JS in Page.js & page.js

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,8 +26,10 @@
 @import "forms";
 @import "buttons";
 // Components: common
+@import "header";
 @import "page";
-@import "toolbar";
+@import "editortoolbar";
+@import "lefttoolbar";
 @import "sidebar";
 @import "checklist";
 @import "component-animations";
