[HER-6] Finished Code Ignitor merge. Fixed some JS. Added a new Toolbar and Context menu and worked on selection and deselection of elements.

--- a/assets/sass/_sidebar.scss
+++ b/assets/sass/_sidebar.scss
@@ -6,61 +6,41 @@
   #sidebar {
 	width: $sidebar-tablet;
 	float: none;
-	position: relative;
-
-	#sidebar-toggle {
-	  position: relative;
-	  width: 100%;
-	  height: 20px;
-	  border-bottom: 1px solid;
-	}
   }
 }
 
 @media (min-width: $screen-sm) {
   #sidebar {
 	width: $sidebar-desktop;
-	position: fixed;
-
-	#sidebar-toggle {
-	  height: 100%;
-	  top: 0;
-	  bottom: 0;
-	  right: 0;
-	  margin-right: -$sidebar-item-width;
-	  position: absolute;
-	  width: $sidebar-item-width;
-	  border-right: 1px solid;
-	  border-left: 1px solid;
-	}
   }
 }
 
 @media (min-width: $screen-lg) {
   #sidebar {
 	width: $sidebar-lg-desktop;
-	position: fixed;
   }
 }
 
 #sidebar {
-  top: 0;
+  position: fixed;
+  top: 51px;
+  right: 0;
   bottom: 0;
   z-index: 11;
   float: left;
   background: $sidebar-bg;
 
   .sidebar-inner {
+	float: left;
 	height: 100%;
 	width: 100%;
+	padding-left: 10px;
 	overflow-y: auto;
-	overflow-x: hidden;
 
 	ul {
 	  list-style-type: none;
 	  padding: 0;
 	  margin: 0;
-	  clear: both;
 
 	  li {
 		display: block;
@@ -72,7 +52,6 @@
 		line-height: $sidebar-item-height;
 
 		.heading {
-		  text-shadow: 0 1px 0 #EBEBEB;
 		  position: relative;
 		  overflow: hidden;
 		  display: block;
@@ -121,13 +100,9 @@
 		  border-top: 3px solid $sidebar-submenu-border-top;
 		  border-bottom: 1px solid $sidebar-submenu-border-bottom;
 
-		  //border-top: 1px solid $sidebar-head-border;
-
 		  li {
-			width: 95%;
-			//border-top: 1px solid $sidebar-sub-border-top;
-			//border-bottom: 1px solid $sidebar-sub-border-bottom;
-			padding: 0 0 0 5%;
+			width: 100%;
+			padding: 0 5%;
 			line-height: 25px;
 			color: $sidebar-submenu-text;
 
@@ -138,10 +113,6 @@
 			}
 			// .sidebar-inner ul li ul li a
 
-			&:first-child {
-			  //border-top: 1px solid $sidebar-sub-border-bottom;
-			}
-			// .sidebar-inner ul li ul li:first
 		  }
 		  // .sidebar-inner ul li ul li
 		}
@@ -153,18 +124,10 @@
 		  height: $sidebar-item-height;
 		  margin: 0;
 		  padding: 5px;
-		  //background: $sidebar-sub-border-bottom;
-		  //border: 1px solid $sidebar-sub-border-top;
 		  box-shadow: none;
-		  //color: $sidebar-head-text;
 		  line-height: $sidebar-item-height;
 		}
 		// .sidebar-inner ul li input/select/textarea
-
-		input {
-		  height: 18px;
-		}
-		// .sidebar-inner ul li input
 	  }
 	  // .sidebar-inner ul li
 	}
@@ -173,10 +136,16 @@
   // .sidebar-inner
 
   #sidebar-toggle {
+	top: 0;
+	bottom: 0;
+	left: 0;
+	margin-right: -$sidebar-item-width;
+	position: absolute;
 	z-index: 999;
+	width: $sidebar-item-width;
 	background: $sidebar-toggle-bg;
-	border-color: $sidebar-toggle-border;
-
+	border-left: 1px solid $sidebar-toggle-border;
+	border-right: 1px solid $sidebar-toggle-border;
 
 	&:hover {
 	  cursor: pointer;
@@ -194,151 +163,46 @@
 	top: 0;
 	color: #838383;
 	cursor: pointer;
-	text-shadow: 0 1px 0 #EBEBEB;
   }
   // .heading-toggle
 }
 
 // .sidebar
 
-#userpane {
-	.row {
-	  background: #405272;
-	  color: #fff;
-	  margin: 0;
-	  min-height: 90px;
-	  box-shadow: inset rgba(0,0,0, 0.3) 0 0 10px;
+#element-data {
+  li.value {
+	padding: 5% !important;
+	margin: 5px 0 15px 0;
+	border-top: 1px solid #B0CCD4;
+	border-bottom: 1px solid #B0CCD4;
+	background: #D7E8EC;
+
+	label {
+	  display:block;
+	  text-align: center;
 	}
 
-	.left {
+	#element-attr-value {
+	  min-height: 60px;
+	  line-height: normal;
+	  resize: vertical;
+	}
+  }
+
+  li.attribute {
+
+	label {
+	  width: 30%;
 	  float: left;
-	  width: 40%;
-	  height: 100%;
-
-	  .avatar {
-		padding: 7px;
-		height: 100%;
-
-		a {
-		  height: 100%;
-		  width: 100%;
-		  display: block;
-		}
-
-		img {
-		  width: 90%;
-		  border-radius: 5px;
-		  max-width: 160px;
-		}
-	  }
+	  line-height: 40px;
 	}
 
-  .right {
-	float: left;
-	width: 60%;
-	height: 100%;
-	position: relative;
-
-	.user {
-	  margin: 5px;
-	  width: 90%;
-
-	  .name {
-		font-weight: bold;
-		font-size: 16px;
-		color: #E7BF3F;
-	  }
-
-	  .role {
-		color: #BCCFF0;
-		font-weight: bold;
-		font-size: 12px;
-	  }
-	}
-
-	.business {
-	  width: 90%;
-	  background: #324361;
-	  padding: 5px;
-	  font-weight: bold;
-	  color: #9FC2F7;
-	  border-bottom-left-radius: 5px;
-	  border-bottom-right-radius: 5px;
-	}
-  }
-}
-
-
-@media (max-width: $screen-sm) {
-  #userpane {
-	font-size: 22px;
-
-	.row {
-	  height: 150px !important;
-	}
-
-
-	.left {
-
-	}
-
-	.right {
-	  .business {
-		margin-top: 20px;
-		border-radius: 5px;
-	  }
-
-	  .name {
-		font-size: 22px !important;
-	  }
-
-	  .role {
-		font-size: 16px !important;
-	  }
-	}
-  }
-}
-
-#user-menu {
-  .left {
-	float: left;
-	display: block;
-	width: 100%;
-	height: 100%;
-
-	div.avatar {
-	  width: 64px;
-	  height: 64px;
-	  display: block;
-	  margin: 8px;
-	  @include border-radius(5px, 5px, 5px, 5px);
-	  overflow: hidden;
-	}
-  }
-  .right {
-	float: left;
-	display: block;
-	width: 100%;
-	height: 100%;
-
-	.user {
+	input {
+	  width: 70%;
 	  height: 30px;
-	  margin-top: 3px;
-
-	  .full-name {
-		height: 20px;
-		color: #ffb802;
-		font-size: 16px;
-		font-weight: bold;
-	  }
-
-	  .role {
-		height: 10px;
-		color: #bdbdbd;
-		font-size: 12px;
-		font-style: italic;
-		font-weight: bold;
-	  }
+	  line-height: 30px;
+	  float: left;
+	  text-align: center;
 	}
   }
 }
