--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -488,7 +488,7 @@ hr {
   /* line 143, ../sass/_scaffolding.scss */
   .full {
     padding: 20px;
-    margin-left: 275px;
+    margin-left: 375px;
   }
 }
 /* line 150, ../sass/_scaffolding.scss */
@@ -2869,11 +2869,11 @@ a.btn:hover {
 /* line 4, ../sass/_lefttoolbar.scss */
 #left-toolbar {
   position: fixed;
-  width: 100px;
+  width: 200px;
   height: 100%;
   top: 51px;
-  background: #2B2B2B;
-  color: #fff;
+  background: #bab9b9;
+  color: #6f6f6f;
 }
 /* line 12, ../sass/_lefttoolbar.scss */
 #left-toolbar ul.menu {
@@ -2888,6 +2888,39 @@ a.btn:hover {
   padding: 10px 5px;
   text-align: center;
   font-weight: bold;
+}
+/* line 25, ../sass/_lefttoolbar.scss */
+#left-toolbar ul.menu li .element-selector {
+  width: 150px;
+  height: 125px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+  background-color: #eeeeee;
+  cursor: pointer;
+  margin: 0 auto;
+}
+/* line 34, ../sass/_lefttoolbar.scss */
+#left-toolbar ul.menu li .element-selector .element-selector-container {
+  position: relative;
+  top: 5px;
+  left: 5px;
+  width: 140px;
+  height: 75px;
+  -webkit-border-radius: 15px 15px 0 0;
+  border-radius: 15px 15px 0 0;
+  background-color: #f7f7f7;
+}
+/* line 44, ../sass/_lefttoolbar.scss */
+#left-toolbar ul.menu li .element-selector .element-selector-text {
+  font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+  line-height: 50px;
+  color: #333333;
+  font-size: 16px;
+  text-align: center;
+}
+/* line 52, ../sass/_lefttoolbar.scss */
+#left-toolbar ul.menu li .element-selector:hover {
+  background-color: #83d2ff;
 }
 
 /* ------------------------------------------------------
@@ -2909,7 +2942,7 @@ a.btn:hover {
 @media (min-width: 1200px) {
   /* line 19, ../sass/_sidebar.scss */
   #sidebar {
-    width: 275px;
+    width: 375px;
   }
 }
 /* line 24, ../sass/_sidebar.scss */
@@ -9482,8 +9515,12 @@ td.visible-print {
   float: left;
   cursor: move;
 }
+/* line 49, ../sass/elements/_cell.scss */
+.element .content {
+  height: 100%;
+}
 
-/* line 50, ../sass/elements/_cell.scss */
+/* line 54, ../sass/elements/_cell.scss */
 #context-menu {
   position: absolute;
   width: auto;
@@ -9492,30 +9529,30 @@ td.visible-print {
   z-index: 99999;
   background-color: #FFF;
 }
-/* line 58, ../sass/elements/_cell.scss */
+/* line 62, ../sass/elements/_cell.scss */
 #context-menu ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-/* line 63, ../sass/elements/_cell.scss */
+/* line 67, ../sass/elements/_cell.scss */
 #context-menu ul li {
   padding: 5px 10px;
   font-size: 16px;
   cursor: pointer;
 }
-/* line 68, ../sass/elements/_cell.scss */
+/* line 72, ../sass/elements/_cell.scss */
 #context-menu ul li:hover {
   background-color: rgba(131, 210, 255, 0.5);
 }
 
-/* line 75, ../sass/elements/_cell.scss */
+/* line 79, ../sass/elements/_cell.scss */
 .textbox {
   width: 200px;
   min-height: 20px;
   display: block;
 }
-/* line 80, ../sass/elements/_cell.scss */
+/* line 84, ../sass/elements/_cell.scss */
 .textbox pre {
   width: 100%;
   height: 100%;
@@ -9525,7 +9562,7 @@ td.visible-print {
   padding: 0;
 }
 
-/* line 90, ../sass/elements/_cell.scss */
+/* line 94, ../sass/elements/_cell.scss */
 .ui-resizable-e {
   position: absolute;
   top: 0;
@@ -9535,7 +9572,7 @@ td.visible-print {
   cursor: e-resize;
 }
 
-/* line 99, ../sass/elements/_cell.scss */
+/* line 103, ../sass/elements/_cell.scss */
 .ui-resizable-s {
   position: absolute;
   bottom: -4px;
@@ -9544,7 +9581,7 @@ td.visible-print {
   cursor: ns-resize;
 }
 
-/* line 107, ../sass/elements/_cell.scss */
+/* line 111, ../sass/elements/_cell.scss */
 .ui-resizable-se {
   position: absolute;
   bottom: -2px;
