--- a/assets/sass/_page.scss
+++ b/assets/sass/_page.scss
@@ -23,6 +23,6 @@
   width: 960px;
   height: 1358px;
   box-shadow: 0 0 20px rgba(0,0,0, 0.3);
-  margin: 0 auto;
+  margin: 25px auto 0;
   background: #fff;
 }
