--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1769,12 +1769,54 @@ th {
   text-align: left;
 }
 
-/* line 16, ../sass/_tables.scss */
+/* line 14, ../sass/_tables.scss */
+table#display-table {
+  width: 100%;
+  color: #222222;
+}
+/* line 18, ../sass/_tables.scss */
+table#display-table tr {
+  border-bottom: 1px solid #999999;
+}
+/* line 21, ../sass/_tables.scss */
+table#display-table tr td, table#display-table tr th {
+  padding: 10px 15px;
+}
+/* line 24, ../sass/_tables.scss */
+table#display-table tr:hover {
+  background-color: rgba(131, 210, 255, 0.1);
+}
+/* line 30, ../sass/_tables.scss */
+table#display-table tr td.display-name {
+  width: 65%;
+}
+/* line 33, ../sass/_tables.scss */
+table#display-table tr td.display-name:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+/* line 38, ../sass/_tables.scss */
+table#display-table tr td.display-date {
+  width: 10%;
+  color: #555555;
+}
+/* line 42, ../sass/_tables.scss */
+table#display-table tr td.display-by {
+  width: 20%;
+}
+/* line 45, ../sass/_tables.scss */
+table#display-table tr td.display-action {
+  width: 5;
+  text-align: center;
+  cursor: pointer;
+}
+
+/* line 56, ../sass/_tables.scss */
 .table {
   width: 100%;
   margin-bottom: 20px;
 }
-/* line 25, ../sass/_tables.scss */
+/* line 65, ../sass/_tables.scss */
 .table thead > tr > th,
 .table thead > tr > td,
 .table tbody > tr > th,
@@ -1786,12 +1828,12 @@ th {
   vertical-align: top;
   border-top: 1px solid #dddddd;
 }
-/* line 34, ../sass/_tables.scss */
+/* line 74, ../sass/_tables.scss */
 .table thead > tr > th {
   vertical-align: bottom;
   border-bottom: 2px solid #dddddd;
 }
-/* line 43, ../sass/_tables.scss */
+/* line 83, ../sass/_tables.scss */
 .table caption + thead tr:first-child th, .table caption + thead tr:first-child td,
 .table colgroup + thead tr:first-child th,
 .table colgroup + thead tr:first-child td,
@@ -1799,16 +1841,16 @@ th {
 .table thead:first-child tr:first-child td {
   border-top: 0;
 }
-/* line 49, ../sass/_tables.scss */
+/* line 89, ../sass/_tables.scss */
 .table tbody + tbody {
   border-top: 2px solid #dddddd;
 }
-/* line 54, ../sass/_tables.scss */
+/* line 94, ../sass/_tables.scss */
 .table .table {
   background-color: #ebeced;
 }
 
-/* line 67, ../sass/_tables.scss */
+/* line 107, ../sass/_tables.scss */
 .table-condensed thead > tr > th,
 .table-condensed thead > tr > td,
 .table-condensed tbody > tr > th,
@@ -1818,11 +1860,11 @@ th {
   padding: 5px;
 }
 
-/* line 78, ../sass/_tables.scss */
+/* line 118, ../sass/_tables.scss */
 .table-bordered {
   border: 1px solid #dddddd;
 }
-/* line 85, ../sass/_tables.scss */
+/* line 125, ../sass/_tables.scss */
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > th,
@@ -1831,59 +1873,59 @@ th {
 .table-bordered > tfoot > tr > td {
   border: 1px solid #dddddd;
 }
-/* line 93, ../sass/_tables.scss */
+/* line 133, ../sass/_tables.scss */
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
 }
 
-/* line 108, ../sass/_tables.scss */
+/* line 148, ../sass/_tables.scss */
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #f9f9f9;
 }
 
-/* line 119, ../sass/_tables.scss */
+/* line 159, ../sass/_tables.scss */
 .table-booking > tbody > tr.inprogress > td,
 .table-booking > tbody > tr.inprogress > th {
   background-color: #dff0d8;
 }
-/* line 125, ../sass/_tables.scss */
+/* line 165, ../sass/_tables.scss */
 .table-booking > tbody > tr.future > td,
 .table-booking > tbody > tr.future > th {
   background-color: #d9edf7;
 }
-/* line 131, ../sass/_tables.scss */
+/* line 171, ../sass/_tables.scss */
 .table-booking > tbody > tr.pending > td,
 .table-booking > tbody > tr.pending > th {
   background-color: #fcf8e3;
 }
-/* line 137, ../sass/_tables.scss */
+/* line 177, ../sass/_tables.scss */
 .table-booking > tbody > tr.disabled > td,
 .table-booking > tbody > tr.disabled > th {
   background-color: #f2dede;
 }
 
-/* line 152, ../sass/_tables.scss */
+/* line 192, ../sass/_tables.scss */
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
   background-color: whitesmoke;
 }
 
-/* line 163, ../sass/_tables.scss */
+/* line 203, ../sass/_tables.scss */
 table col[class*="col-"] {
   float: none;
   display: table-column;
 }
 
-/* line 171, ../sass/_tables.scss */
+/* line 211, ../sass/_tables.scss */
 table td[class*="col-"],
 table th[class*="col-"] {
   float: none;
   display: table-cell;
 }
 
-/* line 189, ../sass/_tables.scss */
+/* line 229, ../sass/_tables.scss */
 .table > thead > tr > td.active,
 .table > thead > tr > th.active, .table > thead > tr.active > td, .table > thead > tr.active > th,
 .table > tbody > tr > td.active,
@@ -1964,7 +2006,7 @@ table th[class*="col-"] {
 }
 
 @media (max-width: 768px) {
-  /* line 206, ../sass/_tables.scss */
+  /* line 246, ../sass/_tables.scss */
   .table-responsive {
     width: 100%;
     margin-bottom: 15px;
@@ -1974,12 +2016,12 @@ table th[class*="col-"] {
     border: 1px solid #dddddd;
     -webkit-overflow-scrolling: touch;
   }
-  /* line 216, ../sass/_tables.scss */
+  /* line 256, ../sass/_tables.scss */
   .table-responsive > .table {
     margin-bottom: 0;
     background-color: #fff;
   }
-  /* line 226, ../sass/_tables.scss */
+  /* line 266, ../sass/_tables.scss */
   .table-responsive > .table > thead > tr > th,
   .table-responsive > .table > thead > tr > td,
   .table-responsive > .table > tbody > tr > th,
@@ -1988,11 +2030,11 @@ table th[class*="col-"] {
   .table-responsive > .table > tfoot > tr > td {
     white-space: nowrap;
   }
-  /* line 234, ../sass/_tables.scss */
+  /* line 274, ../sass/_tables.scss */
   .table-responsive > .table-bordered {
     border: 0;
   }
-  /* line 243, ../sass/_tables.scss */
+  /* line 283, ../sass/_tables.scss */
   .table-responsive > .table-bordered > thead > tr > th:first-child,
   .table-responsive > .table-bordered > thead > tr > td:first-child,
   .table-responsive > .table-bordered > tbody > tr > th:first-child,
@@ -2001,7 +2043,7 @@ table th[class*="col-"] {
   .table-responsive > .table-bordered > tfoot > tr > td:first-child {
     border-left: 0;
   }
-  /* line 247, ../sass/_tables.scss */
+  /* line 287, ../sass/_tables.scss */
   .table-responsive > .table-bordered > thead > tr > th:last-child,
   .table-responsive > .table-bordered > thead > tr > td:last-child,
   .table-responsive > .table-bordered > tbody > tr > th:last-child,
@@ -2010,7 +2052,7 @@ table th[class*="col-"] {
   .table-responsive > .table-bordered > tfoot > tr > td:last-child {
     border-right: 0;
   }
-  /* line 253, ../sass/_tables.scss */
+  /* line 293, ../sass/_tables.scss */
   .table-responsive > .table-bordered > thead > tr:last-child > th,
   .table-responsive > .table-bordered > thead > tr:last-child > td,
   .table-responsive > .table-bordered > tbody > tr:last-child > th,
