[HER-9] Added ATTRIBUTES to PROPERTIES. Make the Table Header dynamic based off the 'header' attribute. Also made .content auto size with .element

--- a/assets/sass/_tables.scss
+++ b/assets/sass/_tables.scss
@@ -18,11 +18,16 @@ table#display-table {
   tr {
 	border-bottom: 1px solid $gray-light;
 
+	&:hover {
+	  background-color: $element-active-near-transparent;
+	}
+
 	td, th {
 	  padding: 10px 15px;
 	}
-	&:hover {
-		background-color: $element-active-near-transparent;
+
+	th {
+		text-transform: capitalize;
 	}
 
 	td {
