--- a/assets/sass/elements/_cell.scss
+++ b/assets/sass/elements/_cell.scss
@@ -47,7 +47,9 @@
   }
 
   .content {
-	height: 100%;
+	min-height: 100%;
+	height: auto;
+	overflow: hidden;
 	width: 100%;
 	line-height: 10px;
   }
